# Thea

./: .clinerules  .gitignore  .instructions.md  batch_extract.py  hardware.py  main.py  motion_assessment.py  optical_flow.py  productionize.todo.md  pyproject.toml  readme.md  requirements.txt  setup.localLLM.md  setup.md  video_processing.py  video_slicer.py  video_slicer_architecture.excalidraw
.github/instructions/: thea-mcp.instructions.md
config/pipelines/: default.pipeline.json
config/presets/: action.json  cinematic.json  permissive.json  strict.json
config/settings/: settings.json  supported_codecs.txt
docs/: optimize.todo.md  setup.localLLM.md  setup.mcp-skills.md  setup.md  video_creator.md
downscaler/: __init__.py  downscaler.py
motion_assessment/: __init__.py  analyzer.py  assessment.py  optical_flow.py
prompts/: code-review.md  git-commit.md  knowledge-graph-builder.md  rubber-duck.md  sequential-solver.md  test-writer.md  web-research.md
slicer/: __init__.py  slicer.py
src/thea/: __init__.py  __main__.py  cli.py  pipeline.py
tests/: __init__.py  reference_sample.json  test_batch_extract.py  test_hardware.py  test_motion_assessment.py  test_optical_flow.py  test_video_processing.py  test_video_slicer.py
tests/fast/: test_config_loader.py  test_hardware.py  test_motion_assessment.py  test_pipeline_config.py  test_settings.py  test_thea_operations.py
tests/slow/: reference_sample.json  test_analyzer.py  test_downscaler.py  (+3 more)
utils/: config_loader.py  hardware.py  metrics.py  pipeline_logger.py  settings.py  validations.py  video_io.py
(+12 files in other folders)
